# pix-stream

./: .gitignore  .slugignore  Aptfile  LICENSE  Procfile  README.md  TODO_chores+tasks.md  build-app.sh  build.sh  buildpack-run.sh  bump_version.js  deploy.sh  jsconfig.json  lighthouserc.js  package-lock.json  package.json  sonar-project.properties
.husky/: README.md  pre-commit
client/: .gitignore  angular.json  eslint.config.js  karma-setup.js  karma.conf.js  ngsw-config.json  package.json  screenshot-service.ts  server.ts  transloco.config.ts  tsconfig.json
client/src-tauri/: Cargo.toml  entitlements.distribute.plist  tauri.conf.json
client/src-tauri/capabilities/: default.json  desktop.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
docs/: ADDING_A_LANGUAGE.md  AUTH_IMPLEMENTATION.md  CAPTCHA_IMPLEMENTATION.md  COOKIE_CONSENT_IMPLEMENTATION.md  DYNAMIC-SCREENSHOTS.md  E2E_TESTING.md  EMAIL_FEATURES_IMPLEMENTATION.md  EMAIL_TRANSLATION_GUIDE.md  FORK_CHECKLIST.md  HYBRID_API_ARCHITECTURE.md  MANUAL_SANITY_TESTING.md  QUICK_START_AUTH.md  SECURITY_TESTING.md  SSR.md
email_templates/: Confirm sign up.html  Email address change.html  Email changed notification.html  Password changed.html  Reset password.html
public_html/: .htaccess  chunk-2PUJNUYV.js  chunk-4PACPN4N.js  chunk-4ZYNAPLE.js  chunk-5A5C3GMQ.js  chunk-5FXAPW6U.js  chunk-5UMS2UI3.js  chunk-5XAVQY2E.js  chunk-6F4RXUY5.js  chunk-6NYM4VHG.js  chunk-6PEZVLCN.js  chunk-6PSMNC2E.js  chunk-6QVSB45T.js  chunk-722BVNVA.js  chunk-77ZOLNGZ.js  chunk-7JUUOT3S.js  (+151 more)
(+364 files in other folders)
